<resources>

   
    
    
    
     <string name="image">Thumbnail</string>
    
    <color name="titleBackGroundColor">#FFFFFF</color>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">EnergySense</string>
    <string name="wakeup">Period</string>
    <string name="sample">Duration(accl.)</string>
    <string name="done">Done</string>
    <string name="sensoract">SensorAct</string>
    <string name="wifi">Wifi</string>
    <string name="cellid">Cell ID</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="collect">Collect Data</string>
    <string name="save">Save</string>
    <string name="main">Main</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="serverip">Server IP</string>
    <string name="newdevice">New Device</string>
    <string name="devicename">Device name</string>
    <string name="ip">IP</string>
    <string name="location">Location(optional)</string>
    <string name="tag">Tag(optional)</string>
    <string name="next">next</string>
    <string name="sensorname">sensor name</string>
    <string name="sensorid">sensor id</string>
    <string name="channel">Channel details</string>
    <string name="channelname">channel name</string>
    <string name="type">Type(optional)</string>
    <string name="unit">Unit(optional)</string>
    <string name="samplingperiod">Sampling Period(optional)</string>
    <string name="longitude">Longitude(optional)</string>
    <string name="latitude">Latitude(optional)</string>
    <string name="name">Name</string>
    <string name="plot">Plot Data</string>
    <string name="from">start Time</string>
    <string name="to">end Time</string>
    <string name="start">Start Uploading</string>
    <string name="refresh">Refresh</string>
    <string name="mobilesensors">MobileSensors</string>
    <string name="ssid">SSID</string>
    <string name="bssid">BSSID</string>
    <string name="rssi">RSSI</string>
    <string name="accesspoint">Select AccessPoint</string>
    <string name="access">Access Point</string>
    <string name="soundsampletime">Duration(sound)</string>
    <string name="vpdsurl">VPDS Url</string>
    <string name="url">URL</string>
    <string name="vpds">VPDS URL(http://IP/port_no)</string>
    <string name="settings">Settings</string>
    <string name="date">Date</string>
    <string name="fromtime">From</string>
    <string name="frm">start time</string>
    <string name="totime">end time</string>
    <string name="plotdata">Plot</string>
    <string name="upload1">Upload</string>
    <string name="userid">userID</string>
    <string name="statistics">Statistics</string>
    <string name="description">Descrição</string>
    <string name="key_correios">PB123456789BR</string>
     <string name="seta">seta</string>
    
     <string name="hello">Hello World, DashBoardExampleActivity!</string>
    <string name="app_name1">EnergySense</string>

    <string name="txtDemo">EnergySense App </string>
    
    <!-- Activity Titles -->
    <string name="HomeActivityTitle">EnergySense</string>
    <string name="FeedbackActivityTitle">Feedback</string>
    <string name="EclairActivityTitle">Accelerometer</string>
    <string name="FroyoActivityTitle">Light</string>
    <string name="GingerbreadActivityTitle">WiFi</string>
    <string name="HoneycombActivityTitle">CellID</string>
    <string name="ICSActivityTitle">Proximity</string>
    <string name="JellyBeanActivityTitle">Sound</string>
    <string name="mode">Network Mode</string>
     <string name="owned">Owned Devices</string>
      <string name="shared">Shared Devices</string>
      <string name="timer">Timer Settings</string>
      <string name="upload">Upload</string>
      <string name="networkmode">Network Mode</string>
      <string name="appusername">App UserName</string>
      <string name="graphsettings">Graph Settings</string>
      <string name="info">Device Info..</string>
      <string name="acceskey">Access Key..</string>
      <string name="vpds1">Select VPDS</string>
      <string name="accesspoint1">Access Point</string>
      <string name="data">Upload Data..</string>
      <string name="yes">Yes</string>
      <string name="no">No</string>
      <string name="enable">Enable Wifi ?</string>
      
      <string name="acclabel">Accl Label</string>
       <string name="audiolabel">Sound Label</string>
       <string name="wifilabel">Wifi Label</string>
      
      
      
      
      
      
      
        <string name="app_name">Audalyzer</string>
    <string name="description">An audio analyzer for your Android phone.</string>


    <string name="eula_title">Not for serious use</string>
    
    <string name="eula_text">Audalyzer is a toy spectrum analyser for
your phone.  Since microphone sensitivity varies between individual devices,
let alone models, it\'s impossible to generate accurate sound level readings
with this app; so all data should be taken with a pinch of salt.  dB levels
are relative to the maximum input level of your device.  Still, it may be
interesting when used to compare sound readings at different locations.\n\
\n\
This program is free software, and is distributed by its creator free
of charge.  A free copy, and the source code, can be obtained on the
project home page; see the About screen.\n\
\n\
This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License at http://www.gnu.org/licenses/gpl-2.0.html
for more details.\n</string>


    <string name="about_text"><b>Audalyzer</b> by Ian Cameron Smith
(headstay), with Sonagram display by Ozneb.\n\
\n\
For information and source code see the project home page.\n\
\n\
This program is free software; you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation; either version 2 of the License, or
(at your option) any later version.\n\
\n\
This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License at http://www.gnu.org/licenses/gpl-2.0.html
for more details.\n</string>


    <string name="menu_prefs">Settings</string>
    <string name="menu_status">Data Status</string>
    <string name="menu_help">Help</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_map">Create Map</string>
    <string name="menu_accl">Accelerometer Label</string>
    <string name="menu_audio">Audio Label</string>
    <string name="menu_data">Data Collection</string>
    <string name="menu_about">About</string>
    <string name="menu_eula">Disclaimer</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_stop">Stop</string>
    
    <!-- Preferences strings. -->
    <string name="prefs_sensors">Sensor Settings</string> 
    <string name="prefs_title">Settings</string>
    <string name="prefs_cat_audio">Audio Analysis Settings</string>
    <string name="prefs_sample">Audio Sample rate</string>
    <string name="prefs_sample_summary">Determine the sample rate, and hence frequency range</string>
    <string name="prefs_wake">WakeUp Time(Sec)</string>
    <string name="prefs_sampletime">Sample Time(Sec)</string>
     <string name="prefs_acclrate">Accelerometer speed</string>
    <string name="prefs_acclrate_summary">Determine the speed at which to collect coordinate data</string>
     <string name="prefs_acclrate_title">Accelerometer Rate</string>
    <string name="prefs_sample_title">Audio Sample Rate</string>
    <string name="prefs_block">Block size</string>
    <string name="prefs_block_summary">Set the input block size -- larger is slower but finer</string>
    <string name="prefs_block_title">Block Size</string>
    <string name="prefs_window">Window function</string>
    <string name="prefs_window_summary">Set spectrum windowing (to eliminate spurious frequencies)</string>
    <string name="prefs_window_title">Window Function</string>
    <string name="prefs_decimate">Decimation</string>
    <string name="prefs_decimate_summary">Improve performance by processing only a portion of the input</string>
    <string name="prefs_decimate_title">Decimation</string>
    <string name="prefs_average">Histogram averaging</string>
    <string name="prefs_average_summary">Determine amount of smoothing in the histogram</string>
    <string name="prefs_average_title">Histogram Averaging</string>
    <string name="prefs_instruments">Instruments visualization</string>
    <string name="prefs_instruments_summary">Choose which instruments are display</string>
    <string name="prefs_instruments_title">Instruments visualization</string>
    <string name="prefs_cat_display">Display Settings</string>
    <string name="prefs_orient">Screen orientation</string>
    <string name="prefs_orient_summary">Set your desired screen rotation behaviour</string>
    <string name="prefs_orient_title">Screen Orientation</string>
    <string name="prefs_wakelock">Keep device awake</string>
    <string name="prefs_wakelock_summary_off">The device will sleep normally after the screen times out.</string>
    <string name="prefs_wakelock_summary_on">The device will stay awake while the app is running.  Warning: battery drain!</string>
    <string name="prefs_cat_debug">Debug Settings</string>
    <string name="prefs_stats">Show performance stats</string>
    <string name="prefs_stats_summary_off">Performance stats are not displayed.</string>
    <string name="prefs_stats_summary_on">Performance stats are displayed.</string>
            
    <!-- Help strings. -->
    <string name="help_title">EnergySense User\'s Manual</string>
        
    <!-- Button strings. -->
    <string name="button_ok">OK</string>
    <string name="button_close">OK</string>
    <string name="button_license">License</string>
    <string name="button_homepage">Project</string>
    
    <!-- URLs. -->
    <string name="url_license">http://www.gnu.org/licenses/gpl-2.0.html</string>
    <string name="url_homepage">http://code.google.com/p/moonblink/wiki/Audalyzer</string>
    <string name="log">Log stats</string>
    <string name="battery">Battery</string>
    <string name="label">label</string>
    
    
    
    
    
    

</resources>