<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
        android:layout_height="fill_parent"
     >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        
      <LinearLayout android:id="@+id/Layout1"
				android:layout_height="wrap_content" android:layout_width="match_parent"
				android:orientation="vertical">

           
				<RelativeLayout android:id="@+id/rLayout1"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:orientation="vertical">

				    <EditText
				        android:id="@+id/editText0"
				        android:layout_width="200sp "
				        android:layout_height="wrap_content"
				        android:layout_alignParentRight="true"
				        android:layout_alignParentTop="true"
				        android:ems="10"
						android:textColor="@color/foreground1"/>

				    <Button
				        android:id="@+id/button0"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignParentLeft="true"
				        android:layout_alignParentTop="true"
				        android:text="@string/date"
				        android:textColor="@color/foreground1" />
				
</RelativeLayout>
</LinearLayout>
        
            
         <LinearLayout android:id="@+id/Layout1"
				android:layout_height="wrap_content" android:layout_width="match_parent"
				android:orientation="vertical">

				<RelativeLayout
				    android:id="@+id/rLayout1"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="vertical" >

				    <EditText
				        android:id="@+id/editText1"
				        android:layout_width="200sp"
				        android:layout_height="wrap_content"
				        android:layout_alignParentRight="true"
				        android:layout_alignParentTop="true"
				        android:ems="10" 
				        android:textColor="@color/foreground1"/>

				    <Button
				        android:id="@+id/button1"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignParentLeft="true"
				        android:layout_alignParentTop="true"
				        android:text="@string/frm" 
				        android:textColor="@color/foreground1"/>

				</RelativeLayout>

</LinearLayout>

        <LinearLayout android:id="@+id/Layout1"
				android:layout_height="wrap_content" android:layout_width="match_parent"
				android:orientation="vertical">

				<RelativeLayout
				    android:id="@+id/rLayout1"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="vertical" >

				    <EditText
				        android:id="@+id/editText2"
				        android:layout_width="200sp"
				        android:layout_height="wrap_content"
				        android:layout_alignParentRight="true"
				        android:layout_alignParentTop="true"
				        android:ems="10" 
				        android:textColor="@color/foreground1"/>

				    <Button
				        android:id="@+id/button2"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignParentLeft="true"
				        android:layout_alignParentTop="true"
				        android:text="@string/totime" 
				        android:textColor="@color/foreground1"/>
				
</RelativeLayout>
</LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

           

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button4"
                android:layout_centerHorizontal="true"
                android:text="@string/plotdata" 
                android:textColor="@color/foreground1"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>